fixed margin spacing after navbar fix

--- a/views/style.css
+++ b/views/style.css
@@ -1,3 +1,7 @@
+main{
+	margin: 8px;
+}
+
 ul{
 	position: sticky;
 	top: 0;
